--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -243,7 +243,7 @@ border-color: rgba(255, 255, 255, 0);
                    <item>
                     <widget class="QLabel" name="label_17">
                      <property name="text">
-                      <string>육류</string>
+                      <string>기타</string>
                      </property>
                     </widget>
                    </item>
@@ -280,7 +280,7 @@ border-color: rgba(255, 255, 255, 0);
                     </widget>
                    </item>
                    <item>
-                    <widget class="QPushButton" name="pushButton_35">
+                    <widget class="QPushButton" name="other_sort_btn">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                        <horstretch>0</horstretch>
@@ -437,7 +437,7 @@ border-color: rgba(255, 255, 255, 0);
                    <item>
                     <widget class="QLabel" name="label_15">
                      <property name="text">
-                      <string>육류</string>
+                      <string>과일 &amp; 채소</string>
                      </property>
                     </widget>
                    </item>
@@ -448,7 +448,7 @@ border-color: rgba(255, 255, 255, 0);
                      </property>
                      <property name="sizeHint" stdset="0">
                       <size>
-                       <width>150</width>
+                       <width>107</width>
                        <height>20</height>
                       </size>
                      </property>
@@ -474,7 +474,7 @@ border-color: rgba(255, 255, 255, 0);
                     </widget>
                    </item>
                    <item>
-                    <widget class="QPushButton" name="pushButton_31">
+                    <widget class="QPushButton" name="fruit_vegetable_sort_btn">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                        <horstretch>0</horstretch>
@@ -631,7 +631,7 @@ border-color: rgba(255, 255, 255, 0);
                    <item>
                     <widget class="QLabel" name="label_18">
                      <property name="text">
-                      <string>육류</string>
+                      <string>어류</string>
                      </property>
                     </widget>
                    </item>
@@ -668,7 +668,7 @@ border-color: rgba(255, 255, 255, 0);
                     </widget>
                    </item>
                    <item>
-                    <widget class="QPushButton" name="pushButton_37">
+                    <widget class="QPushButton" name="sea_food_sort_btn">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                        <horstretch>0</horstretch>
@@ -862,7 +862,7 @@ border-color: rgba(255, 255, 255, 0);
                     </widget>
                    </item>
                    <item>
-                    <widget class="QPushButton" name="pushButton_33">
+                    <widget class="QPushButton" name="meat_sort_btn">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                        <horstretch>0</horstretch>
